<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/v8dp"
            android:text="@string/buy_a_coffee" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/v2dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/linear_layout_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/v8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/geiwopingfen"
                android:textSize="@dimen/v12sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/v24dp"
                android:layout_height="@dimen/v24dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_google_paly_store" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/linear_layout_donation_alipay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/v8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/alipay"
                android:textSize="@dimen/v12sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/v24dp"
                android:layout_height="@dimen/v24dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_alipay" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/linear_layout_donation_qq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/v8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/qqpay"
                android:textSize="@dimen/v12sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/v24dp"
                android:layout_height="@dimen/v24dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_qq" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/linear_layout_donation_wechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="@dimen/v8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/wechatpay"
                android:textSize="@dimen/v12sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/v24dp"
                android:layout_height="@dimen/v24dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_wechat" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>