<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="-8dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginStart="-4dp"
            android:src="@drawable/bg_flower_sakura"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="end"
            android:src="@drawable/bg_flower"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:shadowColor="#24242424"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="3"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp">

                <TextView
                    android:id="@+id/text_view_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_view_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/text_view_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/button_sub"
                    android:layout_width="36dp"
                    android:layout_height="20dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/sub"
                    android:textColor="@color/buttonColor"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/button_link"
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/link"
                    android:textColor="@color/buttonColor"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/button_magnet"
                    android:layout_width="32dp"
                    android:layout_height="20dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/magnet"
                    android:textColor="@color/buttonColor"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/button_delete"
                    android:layout_width="36dp"
                    android:layout_height="20dp"
                    android:layout_margin="4dp"
                    android:background="@drawable/bg_button"
                    android:text="@string/delete"
                    android:textColor="@color/buttonColor"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>
